--- a/Dbit0403/contact.html
+++ b/Dbit0403/contact.html
@@ -4,8 +4,8 @@
         <title>Project ray</title>
     </head>
     <body>
-        <h1>Heading 1</h1>Video provides a powerful way to help you prove your point.
-        <h2>Heading 2</h2>When you click Online Video, you can paste in the embed code for the video you want to add.
-        <h3>Heading 3</h3>You can also type a keyword to search online for the video that best fits your document.
+        <h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+        <h3>Heading 3</h3>
     </body>
 </html>
